--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "be-fsdwdtb11",
   "version": "1.0.0",
   "description": "Backend Repo for the Job Portal Application.",
-  "main": "server.mjs",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.mjs"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
